# did-it

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  leak-gate.yml  release.yml
brand/: README.md  build_lockup.py  trace_logo.py
docs/design/: cross-runtime-installation-plan.md  did-it.md  model-agnostic-ingestion.md  schema-range-validation.md
docs/releases/: v0.2.0.md  v0.2.1.md
eval/: __init__.py  anchor_scan.py  corpus.py  metrics.py  operators.py  run.py  schema_sweep.py
eval/anchor/: .gitkeep
fixtures/: README.md
fixtures/corpus/: dev-adjd.jsonl  dev-adje.jsonl  dev-check.jsonl  dev-compound.jsonl  dev-doctest.jsonl  dev-green-0-delete_test_call.jsonl  dev-green-0-flip_exit_code.jsonl  dev-green-0.jsonl  dev-green-1-delete_test_call.jsonl  dev-green-1-flip_exit_code.jsonl  dev-green-1.jsonl  dev-green-2-delete_test_call.jsonl  dev-green-2-flip_exit_code.jsonl  dev-green-2.jsonl  dev-hedge.jsonl  dev-multisuite.jsonl  dev-pir1scope.jsonl  dev-pir1target.jsonl  dev-pir4some.jsonl  dev-red.jsonl  dev-revconj.jsonl  dev-revcreate.jsonl  dev-revecho.jsonl  dev-revfamily.jsonl  dev-revovercap.jsonl  dev-revtarget.jsonl  dev-unbacked.jsonl  labels.json  test-adja.jsonl  test-adjf.jsonl  test-file-remove_file_edit.jsonl  test-file.jsonl  test-green-0-delete_test_call.jsonl  test-green-0-flip_exit_code.jsonl  test-green-0-miscount.jsonl  test-green-0.jsonl  test-green-1-delete_test_call.jsonl  test-green-1-flip_exit_code.jsonl  test-green-1-miscount.jsonl  test-green-1.jsonl  (+18 more)
requirements/: ci.txt
scripts/: gen_leakgate_names.sh  leak_gate.py  release_check.py
src/did_it/: __init__.py  cli.py  evidence.py  extraction.py  hook.py  reconcile.py  report.py  testing.py  transcript.py  verdicts.py  verify.py
tests/: builder.py  test_acceptance.py  test_accusation_guards.py  test_backed_precision.py  test_eval_harness.py  test_evidence_units.py  test_fail_closed.py  test_leak_gate.py  test_release_check.py  test_runner_literacy.py  test_smoke.py  test_verify.py
