[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "did-it"
version = "0.0.0"  # pre-build scaffold
description = "Mechanically check whether an AI coding agent's claims match what its Claude Code session actually did."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Erick Shepherd" }]
keywords = ["ai-agents", "evaluation", "reliability", "claude-code", "hallucination"]
dependencies = []  # v1 hot path is deterministic stdlib-only (design doc D6)

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
did-it = "did_it.cli:main"
did-it-hook = "did_it.hook:main"

[tool.hatch.build.targets.wheel]
packages = ["src/did_it"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
