[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "did-it"
version = "0.1.0"  # keep in sync with did_it.__version__
description = "Mechanically check whether an AI coding agent's claims match what its Claude Code session actually did."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Erick Shepherd" }]
keywords = ["ai-agents", "evaluation", "reliability", "claude-code", "hallucination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []  # v1 hot path is deterministic stdlib-only (design doc D6)

[project.urls]
Homepage = "https://github.com/ErickShepherd/did-it"
Repository = "https://github.com/ErickShepherd/did-it"
Issues = "https://github.com/ErickShepherd/did-it/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
did-it = "did_it.cli:main"
did-it-hook = "did_it.hook:main"

[tool.hatch.build.targets.wheel]
packages = ["src/did_it"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
